# spb-demo

./: .env.example  .gitignore  README.md  biz_app.py  client_1.py  client_app.py  demo_flow.py  index.html  main.py  pyproject.toml  rag_app.py  requirements.txt  run.sh  session_store.py  spb.proto  spb_app.py  spb_client.py  spb_flow.py  spb_pb2.pyi  spb_server.py  spb_service.py  stop.sh
.github/: Dockerfile  entrypoint.sh
data/: 3HAC066553-001_20250426182528.docx  3HAC066553-001_20250426182528.md  3HAC066553-010_20250426183500.md  sqls.txt
db/: __init__.py  ali_embedding.py  datalayer.py  datalayer_client.py  mariadb.py  rag.py  td.py  td_client.py
docs/: demo_scenario.md  software.md
llama_mcp/: __init__.py  base.py  client.py
mcp/: biz_app.py  flow.py
prompts/en/: data_analysis.json  system.txt
prompts/zh/: data_analysis.json  system.txt
spb/: __init__.py  mcp_server.py  spb_app.py  spb_client.py  spb_pb2.py
utils/: __init__.py  ali_embedding.py  client.py  config.py  db_util.py  mariadb_util.py
